--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sms-token-app",
+  "name": "sms-token-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,21 +14,24 @@
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
-    "@solana/wallet-adapter-wallets": "^0.19.22",
+    "@solana/wallet-adapter-wallets": "^0.19.23",
     "@solana/web3.js": "^1.78.5",
-    "borsh": "^0.7.0",
-    "bs58": "^5.0.0",
+    "axios": "^1.8.2",
+    "bn.js": "^5.2.1",
     "framer-motion": "^10.16.4",
-    "lucide-react": "^0.268.0",
+    "lucide-react": "^0.279.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.2",
+    "@types/node": "^20.6.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
