--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sms-token-app",
+  "name": "duel-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,33 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@solana/spl-token": "^0.3.8",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.34",
-    "@solana/wallet-adapter-wallets": "^0.19.22",
-    "@solana/web3.js": "^1.78.5",
-    "axios": "^1.8.2",
-    "borsh": "^0.7.0",
-    "bs58": "^5.0.0",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.268.0",
+    "@solana/web3.js": "^1.89.1",
+    "framer-motion": "^10.18.0",
+    "gsap": "^3.12.4",
+    "lucide-react": "^0.307.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.45.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^13.24.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^7.0.0",
+    "vite": "^5.0.8"
   }
 }
